implement outputaddress designation